force-app/main/default/objects/IntegracaoWhatsapp__mdt/IntegracaoWhatsapp__mdt.object-meta.xml
<CustomObject>
    <description>Metadados referentes à integração com o Whatsapp Business via API. Altere as informações de acordo com as configurações referentes ao seu número corporativo da Meta.</description>
    <label>Integração Whatsapp</label>
    <pluralLabel>Integrações Whatsapp</pluralLabel>
</CustomObject>