force-app/main/default/objects/IntegracaoWhatsapp__mdt/fields/FaseMensagem__c.field-meta.xml
<CustomField>
    <fullName>FaseMensagem__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Responsavel por definir a fase atual da mensagem</description>
    <label>Fase Mensagem</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>