force-app/main/default/objects/IntegracaoWhatsapp__mdt/fields/IdDoNumeroDoWhatsappBusiness__c.field-meta.xml
<CustomField>
    <fullName>IdDoNumeroDoWhatsappBusiness__c</fullName>
    <label>ID do Número do Whatsapp Business</label>
    <length>45</length>
    <type>Text</type>
</CustomField>