force-app/main/default/objects/IntegracaoWhatsapp__mdt/fields/MensagemAutomatica__c.field-meta.xml
<CustomField>
    <fullName>MensagemAutomatica__c</fullName>
    <description>Mensagem que é definida pelo campo Fase Mensagem (faseMensagem__c)</description>
    <inlineHelpText>Mensagem que é definida pelo campo Fase Mensagem (faseMensagem__c)</inlineHelpText>
    <label>Mensagem Automatica</label>
    <length>255</length>
    <type>Text</type>
</CustomField>