force-app/main/default/objects/IntegracaoWhatsapp__mdt/fields/NumeroDoWhatsappBusiness__c.field-meta.xml
<CustomField>
    <fullName>NumeroDoWhatsappBusiness__c</fullName>
    <label>Número do Whatsapp Business</label>
    <type>Phone</type>
</CustomField>