force-app/main/default/objects/IntegracaoWhatsapp__mdt/fields/SegredoDoAplicativo__c.field-meta.xml
<CustomField>
    <fullName>SegredoDoAplicativo__c</fullName>
    <label>Segredo do Aplicativo</label>
    <length>65</length>
    <type>Text</type>
</CustomField>