force-app/main/default/objects/IntegracaoWhatsapp__mdt/fields/Token_de_Acesso__c.field-meta.xml
<CustomField>
    <fullName>Token_de_Acesso__c</fullName>
    <label>Token de Acesso</label>
    <length>255</length>
    <type>Text</type>
</CustomField>