force-app/main/default/objects/IntegracaoWhatsapp__mdt/fields/TokenDeVerificacaoDoWebhook__c.field-meta.xml
<CustomField>
    <fullName>TokenDeVerificacaoDoWebhook__c</fullName>
    <label>Token de Verificacao do Webhook</label>
    <length>255</length>
    <type>Text</type>
</CustomField>